added help, resource, and settings html and updated js and css

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body>
 
 <div class="navbar">
-    <a href="#" onclick="showJournal()">Journal</a>
-    <a href="#">Settings</a>
-    <a href="#">Help</a>
-    <a href="#">Resources</a>
+    <a href="index.html">Journal</a>
+    <a href="settings.html">Settings</a>
+    <a href="help.html">Help</a>
+    <a href="resources.html">Resources</a>
     <a href="#" onclick="logout()">Logout</a>
 </div>
 
