added copyright js

--- a/help.html
+++ b/help.html
@@ -29,7 +29,9 @@
     <textarea id="feedback-text" placeholder="Share your thoughts..."></textarea><br>
     <button class="button" onclick="submitFeedback()">Submit Feedback</button>
 </div>
-
+<footer>
+    <p id="copyright"></p>
+</footer>
 <script src="script.js"></script>
 </body>
 </html>
