--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
     <button id="previous-page" class="page-button">Previous</button>
     <button id="next-page" class="page-button">Next</button>
 </div>
-
+<footer>
+    <p id="copyright"></p>
+</footer>
 <script src="script.js"></script>
 </body>
 </html>
