--- a/resources.html
+++ b/resources.html
@@ -36,7 +36,9 @@
         <li><a href="https://www.samhsa.gov" target="_blank">Substance Abuse and Mental Health Services Administration (SAMHSA)</a></li>
     </ul>
 </div>
-
+<footer>
+    <p id="copyright"></p>
+</footer>
 <script src="script.js"></script>
 </body>
 </html>
