added signup/signin page

--- a/help.html
+++ b/help.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8" />
+    <meta charset="UTF-8">
     <title>Help - Digital Journaling Website</title>
     <meta name="author" content="Adam Vang">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -26,20 +26,22 @@
         <p>If you have any questions or need assistance, feel free to reach out to us:</p>
 
         <h3>Contact Information</h3>
-        <p>Email: <a href="mailto:creator@example.com">creator@example.com</a></p>
+        <p>Email: <a href="mailto:creator@gmail.com">creator@gmail.com</a></p>
         <p>Phone: (123) 456-7890</p>
 
-        <h3>Glossary</h3>
+        <h3>FAQ</h3>
         <dl>
-            <dt>Autosave</dt>
-            <dd>The feature that saves your entry automatically every few seconds.</dd>
-            <dt>High Contrast Mode</dt>
-            <dd>Switches to black-on-white text for better readability.</dd>
+            <dt>How do I save my entry?</dt>
+            <dd>Your entry autosaves every few seconds—no button clicks needed.</dd>
+            <dt>How do I enable high contrast?</dt>
+            <dd>Check “High Contrast Mode” under Settings to switch to black-on-white text.</dd>
         </dl>
 
         <form id="feedback-form">
             <h3>Give Feedback</h3>
-            <label for="feedback-text"></label><textarea id="feedback-text" name="feedback" placeholder="Share your thoughts..." required></textarea><br><br>
+            <label for="feedback-text"></label><textarea id="feedback-text" name="feedback"
+                                                         placeholder="Share your thoughts..."
+                                                         required></textarea><br><br>
             <button type="submit" class="button">Submit Feedback</button>
         </form>
 
