--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Digital Journaling Website</title>
-    <meta name="description" content="A calming and creative digital journaling website designed to support mental health and personal growth.">
-    <meta name="keywords" content="journaling, mental health, self-care, personal growth, digital diary, online journal, mindfulness">
+    <meta name="description"
+          content="A calming and creative digital journaling website designed to support mental health and personal growth.">
+    <meta name="keywords"
+          content="journaling, mental health, self-care, personal growth, digital diary, online journal, mindfulness">
     <meta name="author" content="Adam Vang">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
