--- a/resources.html
+++ b/resources.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8" />
+    <meta charset="UTF-8">
     <title>Resources - Digital Journaling Website</title>
     <meta name="author" content="Adam Vang">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -39,7 +39,8 @@
             <tr>
                 <td>Crisis Text Line</td>
                 <td>Text HOME to 741741 for free, 24/7 crisis support</td>
-                <td><a href="https://www.crisistextline.org" target="_blank">crisistextline.org</a></td>
+                <td><a href="https://www.crisistextline.org" target="_blank">crisistextline.org</a>
+                </td>
             </tr>
             <tr>
                 <td>National Helpline for Substance Abuse and Mental Health Services</td>
