--- a/help.html
+++ b/help.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <title>Help - Digital Journaling Website</title>
     <meta name="author" content="Adam Vang">
+    <meta name="description"
+          content="Help page for users to give feedback for further improvement on the website.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
 <div class="navbar">
+    <img src="book.webp" alt="https://www.rawpixel.com/image/7729912/png-white-background-paper" class="logo">
     <a href="index.html">Journal</a>
     <a href="settings.html">Settings</a>
     <a href="help.html">Help</a>
@@ -20,6 +23,7 @@
 <div class="subheader">
     <div class="page-title-banner">
         <h1>Help</h1>
+        <img src="question.png" alt="https://www.freeiconspng.com/images/question-mark-icon">
     </div>
     <div class="page-content">
 
@@ -44,7 +48,6 @@
                                                          required></textarea><br><br>
             <button type="submit" class="button">Submit Feedback</button>
         </form>
-
     </div>
 </div>
 
