--- a/resources.html
+++ b/resources.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <title>Resources - Digital Journaling Website</title>
     <meta name="author" content="Adam Vang">
+    <meta name="description"
+          content="A list of resources that can guide the user if they are in need of help.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
 <div class="navbar">
+    <img src="book.webp" alt="https://www.rawpixel.com/image/7729912/png-white-background-paper" class="logo">
     <a href="index.html">Journal</a>
     <a href="settings.html">Settings</a>
     <a href="help.html">Help</a>
@@ -17,53 +20,56 @@
     <a href="#" onclick="logout()">Logout</a>
 </div>
 
-<div class="container">
-    <h2>Resources</h2>
-    <p>Here are some helpful resources for mental health support:</p>
-
-    <div class="section">
-        <table>
-            <thead>
-            <tr>
-                <th>Resource</th>
-                <th>Contact / Details</th>
-                <th>Website</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr>
-                <td>National Suicide Prevention Lifeline</td>
-                <td>Call or text: <strong>988</strong></td>
-                <td>—</td>
-            </tr>
-            <tr>
-                <td>Crisis Text Line</td>
-                <td>Text HOME to 741741 for free, 24/7 crisis support</td>
-                <td><a href="https://www.crisistextline.org" target="_blank">crisistextline.org</a>
-                </td>
-            </tr>
-            <tr>
-                <td>National Helpline for Substance Abuse and Mental Health Services</td>
-                <td>Call: <strong>1-800-662-HELP (1-800-662-4357)</strong></td>
-                <td><a href="https://www.samhsa.gov" target="_blank">samhsa.gov</a></td>
-            </tr>
-            <tr>
-                <td>MentalHealth.gov</td>
-                <td>—</td>
-                <td><a href="https://www.mentalhealth.gov" target="_blank">mentalhealth.gov</a></td>
-            </tr>
-            <tr>
-                <td>National Alliance on Mental Illness (NAMI)</td>
-                <td>—</td>
-                <td><a href="https://www.nami.org" target="_blank">nami.org</a></td>
-            </tr>
-            <tr>
-                <td>Substance Abuse and Mental Health Services Administration (SAMHSA)</td>
-                <td>—</td>
-                <td><a href="https://www.samhsa.gov" target="_blank">samhsa.gov</a></td>
-            </tr>
-            </tbody>
-        </table>
+<div class="subheader">
+    <div class="page-title-banner">
+        <h1>Resources</h1>
+        <img src="help.jpg" alt="https://www.pinterest.com/pin/helping-hand-free-icons-designed-by-freepik--183381016065798870/">
+    </div>
+    <div class="page-content">
+        <div class="section">
+            <p>Here are some helpful resources for mental health support:</p>
+            <table>
+                <thead>
+                <tr>
+                    <th>Resource</th>
+                    <th>Contact / Details</th>
+                    <th>Website</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td>National Suicide Prevention Lifeline</td>
+                    <td>Call or text: <strong>988</strong></td>
+                    <td><a href="https://988lifeline.org/" target="_blank" rel="noopener">988lifeline.org</a></td>
+                </tr>
+                <tr>
+                    <td>Crisis Text Line</td>
+                    <td>Text HOME to 741741 for free, 24/7 crisis support</td>
+                    <td><a href="https://www.crisistextline.org" target="_blank" rel="noopener">crisistextline.org</a></td>
+                </tr>
+                <tr>
+                    <td>National Helpline for Substance Abuse and Mental Health Services</td>
+                    <td>Call: <strong>1-800-662-HELP (1-800-662-4357)</strong></td>
+                    <td><a href="https://www.samhsa.gov" target="_blank" rel="noopener">samhsa.gov</a></td>
+                </tr>
+                <tr>
+                    <td>MentalHealth.gov</td>
+                    <td>—</td>
+                    <td><a href="https://www.mentalhealth.gov" target="_blank" rel="noopener">mentalhealth.gov</a></td>
+                </tr>
+                <tr>
+                    <td>National Alliance on Mental Illness (NAMI)</td>
+                    <td>1-800-950-NAMI (1-800-950-6264)</td>
+                    <td><a href="https://www.nami.org" target="_blank" rel="noopener">nami.org</a></td>
+                </tr>
+                <tr>
+                    <td>Substance Abuse and Mental Health Services Administration (SAMHSA)</td>
+                    <td>—</td>
+                    <td><a href="https://www.samhsa.gov" target="_blank" rel="noopener">samhsa.gov</a></td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
 </div>
 
