--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
 <!-- Navigation Bar -->
 <div class="navbar">
+    <img src="book.webp" alt="https://www.rawpixel.com/image/7729912/png-white-background-paper" class="logo">
     <a href="index.html">Journal</a>
     <a href="settings.html">Settings</a>
     <a href="help.html">Help</a>
