--- a/login.html
+++ b/login.html
@@ -4,12 +4,18 @@
     <meta charset="UTF-8">
     <title>Sign In / Sign Up – Digital Journal</title>
     <meta name="author" content="Adam Vang">
+    <meta name="description"
+          content="A sign up and sign in page. All users must go through this page before using the website.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
 <div class="auth-container">
+    <div class="auth-image">
+        <img src="welcome.jpeg" alt="https://pngtree.com/freepng/red-welcome-in-banner-style_8366885.html">
+    </div>
+
     <h2>Sign In</h2>
     <form id="signin-form">
         <label for="signin-username">Username</label><br>
