--- a/settings.html
+++ b/settings.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <title>Settings - Digital Journaling Website</title>
     <meta name="author" content="Adam Vang">
+    <meta name="description"
+          content="Settings page to help the user change emails and assist with accessibility.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
 <div class="navbar">
+    <img src="book.webp" alt="https://www.rawpixel.com/image/7729912/png-white-background-paper" class="logo">
     <a href="index.html">Journal</a>
     <a href="settings.html">Settings</a>
     <a href="help.html">Help</a>
@@ -20,6 +23,7 @@
 <div class="subheader">
     <div class="page-title-banner">
         <h1>Settings</h1>
+        <img src="settings.jpg" alt="https://pngtree.com/freepng/settings-glyph-black-icon_3755352.html">
     </div>
     <div class="page-content">
         <div class="section">
